# Nomos

./: .gitignore  CMakeLists.txt  Makefile  README.md  TASKS.txt  http.cpp  main.cpp  nomos.hpp  socket.cpp  socket.hpp
.github/workflows/: ci.yml
examples/: main.cpp
examples/public/: index.html
include/: const.hpp  fixed_string.hpp  http.hpp  http_parser.hpp  nomos.hpp  request.hpp  response.hpp  socket.hpp  thread_pool.hpp  types.hpp
src/: http.cpp  nomos.cpp  socket.cpp  thread_pool.cpp
tests/: test_http.cpp  test_thread_pool.cpp
